前台业务逻辑

--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -10,8 +10,8 @@
 <header class="samebg">
     <div class="nav same clearfix">
         <a href="index.jsp"><span>首页</span></a>
-        <a href="shoppingcart.html"><span>购物车</span></a>
-        <a href="user.html"><span>个人信息</span></a>
+        <a href="shoppingcart.jsp"><span>购物车</span></a>
+        <a href="user.jsp"><span>个人信息</span></a>
         <div class="loginbtn">
             <a href="##"><input id="loginbtn" class="btn" type="submit" value="欢迎" /></a>
         </div>
@@ -49,7 +49,7 @@
         <div class="threebtns clearfix">
             <input type="button" value="修改信息"/>
             <input class="buttomsec" type="button" value="确认订单"/>
-            <a href="product.html"><input class="buttomrthr" type="button" value="取消"/></a>
+            <a href="product.jsp"><input class="buttomrthr" type="button" value="取消"/></a>
         </div>
     </div>
 
