前台业务逻辑

--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -9,9 +9,9 @@
 <!--nav-->
 <header class="samebg">
     <div class="nav same clearfix">
-        <a href="index.jsp"><span>首页</span></a>
-        <a href="shoppingcart.jsp"><span>购物车</span></a>
-        <a href="user.jsp"><span>个人信息</span></a>
+        <a href="/"><span>首页</span></a>
+        <a href="/cart"><span>购物车</span></a>
+        <a href="/user"><span>个人信息</span></a>
         <div class="loginbtn">
             <a href="##"><input id="loginbtn" class="btn" type="submit" value="欢迎" /></a>
         </div>
@@ -63,4 +63,6 @@
     </div>
 </footer>
 </body>
+
+
 </html>
